# cpp-base

./: CMakeLists.txt
configs/: AppConfig.hpp  AppConfig.hpp.in
src/: main.cpp
src/libs/math/: BasicMath.cpp  BasicMath.hpp  CMakeLists.txt
